# MRM_Sagnik

./: .gitignore
Open CV/: TASK1_ArUcoModule.py
Reports/: Linux Filesystem.docx  ROS_Report.docx  Version Control.docx
cashier_ws/src/cashier_system/: CMakeLists.txt  README.md  package.xml
cashier_ws/src/cashier_system/msg/: Bill.msg
cashier_ws/src/cashier_system/src/: bill_generator.cpp  inventory_node.cpp  status_node.cpp
cashier_ws/src/cashier_system/srv/: GetStatus.srv
gp_ws/: frames_2026-04-11_19.42.02.gv
gp_ws/src/global_planner_pkg/: CMakeLists.txt  README.md  package.xml
gp_ws/src/global_planner_pkg/launch/: gp.launch.py
gp_ws/src/global_planner_pkg/scripts/: goal_ui.py
gp_ws/src/global_planner_pkg/src/: navigator.cpp
gp_ws/src/global_planner_pkg/urdf/: TARS.xacro
gp_ws/src/global_planner_pkg/worlds/: my_world.world
gpobstacle_ws/src/obstacle_avoidance/: README.md
gpobstacle_ws/src/obstacle_avoidance/launch/: gp.launch.py
gpobstacle_ws/src/obstacle_avoidance/scripts/: maze_ui.py
gpobstacle_ws/src/obstacle_avoidance/src/: maze.cpp  navigator.cpp
gpobstacle_ws/src/obstacle_avoidance/urdf/: TARS.xacro
gpobstacle_ws/src/obstacle_avoidance/worlds/: maze_world.world  my_world.world
robomechtars_ws/: test.urdf
robomechtars_ws/src/robomechtars_description/: CMakeLists.txt  package.xml
robomechtars_ws/src/robomechtars_description/launch/: display.launch.py
robomechtars_ws/src/robomechtars_description/urdf/: TARS.xacro
robomechtars_ws/src/robomechtars_description/worlds/: forest_terrain.world
src/obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/obstacle_avoidance/launch/: maze.launch.py
src/obstacle_avoidance/src/: maze.cpp  navigator.cpp
